Bug 238989 - [GStreamer][WebRTC] Fix data-channel handler build for GStreamer 1.21
Summary: [GStreamer][WebRTC] Fix data-channel handler build for GStreamer 1.21
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Platform (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Philippe Normand
URL:
Keywords: InRadar
Depends on:
Blocks: GstWebRTC
  Show dependency treegraph
 
Reported: 2022-04-08 02:21 PDT by Philippe Normand
Modified: 2022-04-08 13:13 PDT (History)
10 users (show)

See Also:


Attachments
Patch (1.75 KB, patch)
2022-04-08 02:23 PDT, Philippe Normand
no flags Details | Formatted Diff | Diff
Patch (1.75 KB, patch)
2022-04-08 02:27 PDT, Philippe Normand
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Philippe Normand 2022-04-08 02:21:30 PDT
<>
Comment 1 Philippe Normand 2022-04-08 02:23:48 PDT
Created attachment 457033 [details]
Patch
Comment 2 Philippe Normand 2022-04-08 02:27:16 PDT
Created attachment 457035 [details]
Patch
Comment 3 EWS 2022-04-08 13:12:14 PDT
Committed r292630 (249450@main): <https://commits.webkit.org/249450@main>

All reviewed patches have been landed. Closing bug and clearing flags on attachment 457035 [details].
Comment 4 Radar WebKit Bug Importer 2022-04-08 13:13:15 PDT
<rdar://problem/91499172>