[GStreamer][WebRTC] Fix data-channel handler build for GStreamer 1.21 https://bugs.webkit.org/show_bug.cgi?id=238989

Patch by Philippe Normand <pnormand@igalia.com> on 2022-04-08
Reviewed by Xabier Rodriguez-Calvar.

The GST_WEBRTC_DATA_CHANNEL_STATE_NEW enum value was removed from public API in
https://gitlab.freedesktop.org/gstreamer/gstreamer/-/merge_requests/2099.

* Modules/mediastream/gstreamer/GStreamerDataChannelHandler.cpp:
(WebCore::GStreamerDataChannelHandler::checkState):

Canonical link: https://commits.webkit.org/249450@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@292630 268f45cc-cd09-0410-ab3c-d52691b4dbfc